# SLAE2024

./: CMakeLists.txt  README.md
methods/: thomas_method.cpp
src/: CMakeLists.txt  CSR_matrix.h  chebyshev_msi.h  dense_matrix.h  householder_method.h  msi.h  thomas_method.cpp  three_diagonal_matrix.h  vector_operations.h
tests/: CMakeLists.txt  a.out  main.cpp  test_3x3.cpp  test_5x5.cpp  test_chebyshev.cpp  test_csr_matrix.cpp  test_dense_matrix.cpp  test_householder_method.cpp  test_msi.cpp
types/: main.cpp  three_diagonal_matrix.h
